[tool.poetry]
name = "ml-tests"
version = "0.1.0"
description = ""
authors = ["Aleksei Grachev <aleksei.grachev@alberblanc.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
metaflow = "^2.12.34"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
